[gd_scene load_steps=13 format=3 uid="uid://bitlhynokru4p"]

[ext_resource type="Script" path="res://scripts/settings/settings_script.gd" id="1_4t5rt"]
[ext_resource type="PackedScene" uid="uid://c8eggsyxub88u" path="res://scenes/settings/option.tscn" id="1_8yvpv"]
[ext_resource type="Script" path="res://scripts/settings/sensitivity_script.gd" id="1_bkset"]
[ext_resource type="Script" path="res://scripts/settings/window_mode_script.gd" id="2_lj38d"]
[ext_resource type="Script" path="res://scripts/settings/invert_settings_script.gd" id="3_w63kj"]
[ext_resource type="Script" path="res://scripts/settings/v_sync_script.gd" id="4_ov8qm"]
[ext_resource type="Script" path="res://scripts/settings/save_images_script.gd" id="4_r70vu"]
[ext_resource type="Script" path="res://scripts/settings/save_location_script.gd" id="5_5wph1"]
[ext_resource type="PackedScene" uid="uid://bfutyb3sso3te" path="res://scripts/settings/window_size.tscn" id="8_n8ypp"]
[ext_resource type="Script" path="res://scripts/settings/volume_script.gd" id="10_2n2uu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_scil1"]
bg_color = Color(0.239216, 0.239216, 0.239216, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_76d7f"]
bg_color = Color(0.105882, 0.105882, 0.105882, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Settings" type="CanvasLayer"]
layer = 20
script = ExtResource("1_4t5rt")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_scil1")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TabContainer" type="TabContainer" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Gameplay" type="MarginContainer" parent="Panel/VBoxContainer/TabContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Vbox" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Mouse Sensitivity" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_bkset")
sensitivity = "mouse_sensitivity"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Mouse Sensitivity"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.05
value = 0.1
exp_edit = true
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Joy Sensitivity" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("1_bkset")
sensitivity = "joy_sensitivity"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3
text = "Controller Sensitivity"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 0.1
max_value = 10.0
step = 0.05
value = 0.1
exp_edit = true
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="InvertSettings" type="GridContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
layout_mode = 2
size_flags_vertical = 2
columns = 2
script = ExtResource("3_w63kj")

[node name="MouseX" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseX"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Mouse X"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseX"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseX"]
layout_mode = 2
size_flags_horizontal = 6

[node name="ControllerX" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerX"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Controller X"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerX"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerX"]
layout_mode = 2
size_flags_horizontal = 6

[node name="MouseY" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseY"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Mouse Y"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseY"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseY"]
layout_mode = 2
size_flags_horizontal = 6

[node name="ControllerY" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerY"]
layout_mode = 2
size_flags_horizontal = 3
text = "Invert Controller Y"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerY"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerY"]
layout_mode = 2
size_flags_horizontal = 6

[node name="Save Images" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
layout_mode = 2
size_flags_vertical = 0
script = ExtResource("4_r70vu")

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Images"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Images*"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Images"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Images"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Save Location" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
clip_contents = true
layout_mode = 2
size_flags_vertical = 0
alignment = 1
script = ExtResource("5_5wph1")

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location"]
layout_mode = 2
size_flags_horizontal = 3
text = "Save Location"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button" type="Button" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "..."

[node name="FileDialog" type="FileDialog" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location"]
title = "Open a Directory"
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
use_native_dialog = true

[node name="FolderError" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
custom_minimum_size = Vector2(128, 24)
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.662745, 0.2, 0.223529, 1)
theme_override_font_sizes/font_size = 12
text = "The selected folder does not exist!"
horizontal_alignment = 2
autowrap_mode = 3
clip_text = true

[node name="Discalimer" type="Label" parent="Panel/VBoxContainer/TabContainer/Gameplay/Vbox"]
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 10
theme_override_colors/font_color = Color(0.388235, 0.388235, 0.388235, 1)
theme_override_font_sizes/font_size = 12
text = "*This game utilizes a photographic camera as a game mechanic, you may choose to enable or disable to ability to save the photos taken to your device."
autowrap_mode = 3
clip_text = true

[node name="Display" type="MarginContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Vbox" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Display"]
layout_mode = 2

[node name="WindowMode" parent="Panel/VBoxContainer/TabContainer/Display/Vbox" instance=ExtResource("1_8yvpv")]
layout_mode = 2
script = ExtResource("2_lj38d")
text = "Window Mode"
options = Array[String](["Full Screen", "Window Mode", "Borderless Full Screen", "Borderless Window Mode"])

[node name="WindowSize" parent="Panel/VBoxContainer/TabContainer/Display/Vbox" instance=ExtResource("8_n8ypp")]
layout_mode = 2
alignment = 1

[node name="V-sync" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Display/Vbox"]
layout_mode = 2
alignment = 1
script = ExtResource("4_ov8qm")

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Display/Vbox/V-sync"]
layout_mode = 2
size_flags_horizontal = 3
text = "V-Sync Enabled"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Display/Vbox/V-sync"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="CheckButton" type="CheckButton" parent="Panel/VBoxContainer/TabContainer/Display/Vbox/V-sync"]
layout_mode = 2
size_flags_horizontal = 2

[node name="Sound" type="MarginContainer" parent="Panel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Vbox" type="VBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound"]
layout_mode = 2
theme_override_constants/separation = 5
alignment = 1

[node name="Master Volume" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("10_2n2uu")
sound_channel = "Master"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume"]
layout_mode = 2
size_flags_horizontal = 3
text = "Master Volume"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.05
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Music" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("10_2n2uu")
sound_channel = "Music"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music"]
layout_mode = 2
size_flags_horizontal = 3
text = "Music Volume"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.05
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="SFX" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("10_2n2uu")
sound_channel = "SFX"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX"]
layout_mode = 2
size_flags_horizontal = 3
text = "Sound Effects Volume"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.05
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Voice" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
alignment = 1
script = ExtResource("10_2n2uu")
sound_channel = "Voice"

[node name="Label" type="Label" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice"]
layout_mode = 2
size_flags_horizontal = 3
text = "Voice Volume"
horizontal_alignment = 1

[node name="VSeparator" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice"]
custom_minimum_size = Vector2(48, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
step = 0.05
allow_greater = true

[node name="VSeparator2" type="Control" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice/HBoxContainer"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
size_flags_vertical = 4

[node name="LineEdit" type="LineEdit" parent="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice/HBoxContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 5
size_flags_stretch_ratio = 0.25
max_length = 5
context_menu_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
drag_and_drop_selection_enabled = false

[node name="Close" type="Button" parent="Panel"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -24.0
offset_bottom = 31.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_76d7f")
text = "X"

[connection signal="tree_exiting" from="." to="." method="_on_tree_exiting"]
[connection signal="tab_changed" from="Panel/VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Mouse Sensitivity" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Joy Sensitivity" method="_on_line_edit_text_submitted"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseX/CheckButton" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings" method="_on_mouse_x_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerX/CheckButton" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings" method="_on_joy_x_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/MouseY/CheckButton" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings" method="_on_mouse_y_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings/ControllerY/CheckButton" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/InvertSettings" method="_on_joy_y_button_toggled"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Images/CheckButton" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Images" method="_on_check_button_toggled"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location/LineEdit" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location/Button" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location" method="_on_button_pressed"]
[connection signal="dir_selected" from="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location/FileDialog" to="Panel/VBoxContainer/TabContainer/Gameplay/Vbox/Save Location" method="_on_file_dialog_dir_selected"]
[connection signal="toggled" from="Panel/VBoxContainer/TabContainer/Display/Vbox/V-sync/CheckButton" to="Panel/VBoxContainer/TabContainer/Display/Vbox/V-sync" method="_on_check_button_toggled"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Master Volume" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Music" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/SFX" method="_on_line_edit_text_submitted"]
[connection signal="value_changed" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice/HBoxContainer/HSlider" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice" method="_on_h_slider_value_changed"]
[connection signal="text_submitted" from="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice/HBoxContainer/LineEdit" to="Panel/VBoxContainer/TabContainer/Sound/Vbox/Voice" method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="Panel/Close" to="." method="_on_button_pressed"]
